--- a/src/app/active-orders-panel/active-orders-panel.component.html
+++ b/src/app/active-orders-panel/active-orders-panel.component.html
@@ -1,6 +1,6 @@
 <div class="group-header">Active Orders</div>
 
-<table mat-table [dataSource]="dataSource" matSort width="100%">
+<table mat-table [dataSource]="activeOrders" matSort width="100%">
   <ng-container matColumnDef="topic">
     <th mat-header-cell *matHeaderCellDef width="35%" mat-sort-header>Topic</th>
     <td mat-cell *matCellDef="let item"> {{item.topic.text}} </td>
@@ -20,20 +20,6 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Reason</th>
     <td mat-cell *matCellDef="let item"> {{item.reasons}} </td>
   </ng-container>
-
-  <!-- <ng-container matColumnDef="outcome" width="10%">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Outcome</th>
-    <td mat-cell *matCellDef="let item">
-
-      <ng-container *ngIf="item.outcome">
-        {{item.outcome.text}}
-      </ng-container>
-
-
-
-
-    </td>
-  </ng-container> -->
 
   <ng-container matColumnDef="status" width="10%">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
