--- a/src/app/consolidated-goals/consolidated-goals.component.html
+++ b/src/app/consolidated-goals/consolidated-goals.component.html
@@ -1,4 +1,6 @@
 <div class="group-header">Goals</div>
+
+
 <table mat-table matSort [dataSource]="consolidatedGoalsDataSource" width="100%" matSortActive="priority"
   matSortDirection="asc">
   <ng-container matColumnDef="rank">
@@ -60,3 +62,68 @@
 </table>
 <mat-paginator [pageSizeOptions]="[10, 15, 20]" [pageSize]="20" showFirstLastButtons></mat-paginator>
 <!-- <button>Add Goal</button> -->
+
+
+<div class="group-header">SDS GOALS</div>
+<table mat-table matSort [dataSource]="sdsGoalsDataSource" width="100%" matSortActive="priority"
+  matSortDirection="asc">
+  <ng-container matColumnDef="rank">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="priority">Priority</th>
+    <td mat-cell *matCellDef="let goal">
+      <mat-icon *ngIf="goal.priority.toLowerCase().includes('high')">priority_high</mat-icon>
+      <mat-icon *ngIf="goal.priority.toLowerCase().includes('low')">low_priority</mat-icon>
+    </td>
+  </ng-container>
+  <!-- <ng-container matColumnDef="lfcstatus">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="lifecycleStatus">Status</th>
+    <td mat-cell *matCellDef="let goal"> {{goal.lifecycleStatus | titlecase }} </td>
+  </ng-container> -->
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="description">Goal</th>
+    <td mat-cell (click)="openDialog(goal)" *matCellDef="let goal"> {{goal.description}} </td>
+  </ng-container>
+
+  <!-- <ng-container matColumnDef="addresses">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="addresses">Addresses</th>
+    <td mat-cell *matCellDef="let goal" > <span *ngFor="let xxx of goal.addresses">{{xxx.display}}</span> </td>
+  </ng-container>
+  <ng-container matColumnDef="created">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="startDateText">Created</th>
+    <td mat-cell *matCellDef="let goal"> {{goal.startDateText}} </td>
+  </ng-container> -->
+  <ng-container matColumnDef="targetdate">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="targetDateText">Target Date</th>
+    <td mat-cell *matCellDef="let goal"> {{goal.targetDateText}} </td>
+  </ng-container>
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="achievementStatus">Achievement Status</th>
+    <td mat-cell *matCellDef="let goal"> {{ goal.achievementStatus | nullCheck }} </td>
+  </ng-container>
+  <ng-container matColumnDef="mostrecentresult">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="mostrecentresult">Most Recent Result</th>
+    <td mat-cell *matCellDef="let goal">
+<!--{{ getMostRecentResult(goal)}}-->
+
+
+  </td>
+  </ng-container>
+  <ng-container matColumnDef="expressedby">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="expressedBy">Expressed by</th>
+    <td mat-cell *matCellDef="let goal"> {{goal.expressedBy}} </td>
+  </ng-container>
+
+  <!-- <ng-container matColumnDef="expressedbytype">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="expressedByType">Type</th>
+    <td mat-cell *matCellDef="let goal"> {{goal.expressedByType}} </td>
+  </ng-container> -->
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+    [ngClass]="{hovered: row.hovered, highlighted: row.highlighted}" (click)="row.highlighted = !row.highlighted"
+    (mouseover)="row.hovered = true" (mouseout)="row.hovered = false"></tr>
+
+</table>
+<mat-paginator [pageSizeOptions]="[10, 15, 20]" [pageSize]="20" showFirstLastButtons></mat-paginator>
+<!-- <button>Add Goal</button> -->
+
