--- a/src/app/demographics-panel/demographics-panel.component.html
+++ b/src/app/demographics-panel/demographics-panel.component.html
@@ -22,19 +22,27 @@
       </tr>
       <tr>
         <td colspan="2">
-          <b>Title:</b> {{dataservice.careplan.title | nullCheck}}
+          <b>Title:</b> <span ng-if="dataservice.careplan">
+            {{dataservice.careplan.title | nullCheck}}</span>
         </td>
         <td>
-          <b>Status:</b> {{dataservice.careplan.status | nullCheck}}
+          <b>Status:</b> <span ng-if="dataservice.careplan">{{dataservice.careplan.status | nullCheck}}</span>
+        </td>
+
+
+
+
+
+
+        <td>
+          <b>Period:</b> <span ng-if="dataservice.careplan">
+            {{getPeriodText() | nullCheck}}</span>
         </td>
         <td>
-          <b>Period:</b> {{getPeriodText(dataservice.careplan.period.start,dataservice.careplan.period.end) | nullCheck}}
+          <b>Focus:</b> <span ng-if="dataservice.careplan">{{getAddresses() | nullCheck}}</span>
         </td>
         <td>
-          <b>Focus:</b> {{getAddresses() | nullCheck}}
-        </td>
-        <td>
-          <b>Careplan Id:</b> {{dataservice.careplan.id}}
+          <b>Careplan Id:</b> <span ng-if="dataservice.careplan">{{dataservice.careplan.id}}</span>
         </td>
 
       </tr>
@@ -42,8 +50,11 @@
   </mat-expansion-panel-header>
   <table width="100%">
     <tr>
-      <td><b>Date Last Revised:</b> {{dataservice.careplan.meta.lastUpdated}}</td>
-      <td><b>Race and Ethnicity:</b> {{dataservice.demographic.race | nullCheck}}, {{dataservice.demographic.ethnicity | nullCheck}}</td>
+
+      <!--  {{dataservice.careplan.meta.lastUpdated}} -->
+      <td><b>Date Last Revised:</b>TBD</td>
+      <td><b>Race and Ethnicity:</b> {{dataservice.demographic.race | nullCheck}}, {{dataservice.demographic.ethnicity |
+        nullCheck}}</td>
     </tr>
     <tr>
       <td><b>Careplan Category</b> {{getCategories()}}</td>
