Updates to goal processing
Removed bottom table of goal targets
Fixed issue with goal targets in top table
Removed extraneous console.error

--- a/src/app/consolidated-goals/consolidated-goals.component.html
+++ b/src/app/consolidated-goals/consolidated-goals.component.html
@@ -35,10 +35,7 @@
   </ng-container>
   <ng-container matColumnDef="mostrecentresult">
     <th mat-header-cell *matHeaderCellDef mat-sort-header="mostrecentresult">Most Recent Result</th>
-    <td mat-cell *matCellDef="let goal">
-<!--{{ getMostRecentResult(goal)}}-->
-
-
+    <td mat-cell *matCellDef="let goal">{{ getMostRecentResult(goal)}}
   </td>
   </ng-container>
   <ng-container matColumnDef="expressedby">
