--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 <mat-toolbar color="primary" style="height:36px;min-height:36px">
   <mat-toolbar-row>
-    <span>Careplan&nbsp;&nbsp;<small>v</small>{{version}}</span>
+    <span>eCarePlanner&nbsp;&nbsp;<small>v</small>{{version}}</span>
     <!-- This fills the remaining space of the current row -->
     <span class="center-name">{{dataservice.demographic.name}}, DOB: {{dataservice.demographic.dateOfBirth}}</span>
     <span class="example-fill-remaining-space"></span>
