--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
     }]);
 </script>
 
+<app-warning-popup></app-warning-popup>
+
 <mat-toolbar color="primary" style="height:36px;min-height:36px">
   <mat-toolbar-row>
     <span>Careplan&nbsp;&nbsp;<small>v</small>{{version}}</span>
