--- a/src/app/goals-dialog/goal-dialog.component.html
+++ b/src/app/goals-dialog/goal-dialog.component.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td>Achievement</td>
-      <td><content *ngIf="theGoal.achievementStatus.text">{{theGoal.achievementStatus.text}}</content></td>
+      <td><content *ngIf="theGoal.achievementText">{{theGoal.achievementText}}</content></td>
     </tr>
     <tr>
       <td>Lifecycle Status</td>
