--- a/src/app/goals/course-dialog.component.html
+++ b/src/app/goals/course-dialog.component.html
@@ -33,7 +33,7 @@
 
   <mat-form-field>
     <mat-label>Goal Achievement Status</mat-label>
-    <select matNativeControl formControlName="achievementStatus">
+    <select matNativeControl formControlName="achievementText">
       <option value="in-progress">In Progress</option>
       <option value="improving">Improving</option>
       <option value="worsening">Worsening</option>
