--- a/src/app/patient-goals/patient-goals.component.html
+++ b/src/app/patient-goals/patient-goals.component.html
@@ -22,7 +22,7 @@
   </ng-container>
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef>Status</th>
-    <td mat-cell *matCellDef="let goal"> {{goal.achievementStatus.text}} </td>
+    <td mat-cell *matCellDef="let goal"> {{goal.achievementText}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
