--- a/src/app/warning-popup/warning-popup.component.css
+++ b/src/app/warning-popup/warning-popup.component.css
@@ -4,10 +4,11 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black background */
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
   }
   
   .modal {
