Updates for release
Updated logic for care team
Modified header content
Added warning banner feature
Fixed issues with FHIR datatypes

--- a/src/app/medication-panel/medication-panel.component.html
+++ b/src/app/medication-panel/medication-panel.component.html
@@ -3,7 +3,7 @@
 
   <ng-container matColumnDef="medication">
     <th mat-header-cell  *matHeaderCellDef mat-sort-header>Name</th>
-    <td style="cursor: pointer;" (click)="openDialog(med)" mat-cell *matCellDef="let med"> {{med.medication}} ( {{med.type}} ) </td>
+    <td style="cursor: pointer;" (click)="openDialog(med)" mat-cell *matCellDef="let med"> {{med.medication}} </td>
   </ng-container>
 
   <ng-container matColumnDef="effectiveDate">
