Updates to warning logic
Modified warning logic to use string context

--- a/src/app/warning-popup/warning-popup.component.html
+++ b/src/app/warning-popup/warning-popup.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showModal" class="modal-overlay">
+<div *ngIf="this.checkModalStatus()" class="modal-overlay">
     <div class="modal">
       <span class="close-btn" (click)="closeModal()">X</span>
       <div class="modal-content">
@@ -15,4 +15,3 @@
       </div>
     </div>
   </div>
-  
