added version variables picking from package file and changed ui w.r.t wireframes

--- a/src/app/demographics-panel/demographics-panel.component.html
+++ b/src/app/demographics-panel/demographics-panel.component.html
@@ -17,11 +17,12 @@
       </div>
       <div class="info-section">
         <p><b>Age: </b> {{dataservice.demographic.age | nullCheck}}</p>
-        <p><b>ID: </b> {{dataservice.demographic.id | nullCheck}}</p>
+        <br>
+        <!-- <p><b>ID: </b> {{dataservice.demographic.id | nullCheck}}</p> -->
       </div>
       </div>
       <div class="version-and-avatar">
-        <p class="version-info"><b> eCarePlanner 1.2.3</b></p>
+        <p class="version-info"><b> <span>eCarePlanner&nbsp;&nbsp;<small>v</small>{{version}}</span></b></p>
         <mat-icon class="avatar">account_circle</mat-icon>
       </div>
     </div>
