--- a/src/app/active-diagnosis-panel/active-diagnosis-panel.component.html
+++ b/src/app/active-diagnosis-panel/active-diagnosis-panel.component.html
@@ -28,7 +28,7 @@
   <!-- Date -->
   <ng-container matColumnDef="firstOnset">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Date of Initial Diagnosis</th>
-    <td mat-cell *matCellDef="let condition">{{condition.firstOnset | nullCheck }}</td>
+    <td mat-cell *matCellDef="let condition">{{condition.firstOnsetAsText | nullCheck }}</td>
   </ng-container>
   <ng-container matColumnDef="firstRecorded">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Diagnosis First Recorded</th>
