--- a/src/app/active-orders-panel/active-orders-panel.component.css
+++ b/src/app/active-orders-panel/active-orders-panel.component.css
@@ -1,13 +1,13 @@
 mat-grid-tile .mat-figure {
   justify-content: center;
   vertical-align: top;
-  background: blue;
+  background: #6847C1;
 }
 
 .group-header {
   justify-content: center;
   vertical-align: top;
-  background: blue;
+  background: #6847C1;
   color: white;
 }
 
