--- a/src/app/inactive-diagnosis-panel/inactive-diagnosis-panel.component.css
+++ b/src/app/inactive-diagnosis-panel/inactive-diagnosis-panel.component.css
@@ -1,109 +1,82 @@
-tr.mat-header-row {
-  min-height: 48px;
-  height: 48px !important;
+::ng-deep .header-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  padding: 10px;
+  background: none !important;
 }
 
-tr.mat-row {
-  min-height: 24px;
-  height: 24px !important;
+::ng-deep .group-header {
+  font-size: 2em;
+  color: #4a148c !important;
+  margin: 0;
+  border: none !important;
+  background: none !important;
+  text-align: left !important;
 }
 
-.mat-column-checked {
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 10% !important;
-  width: 10% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
+.filter-container {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  width: 100%;
+  justify-content: space-between;
 }
 
-.mat-column-condition{
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 60% !important;
-  width: 60% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
+.filter-icon {
+  display: flex;
+  align-items: center;
 }
 
-.mat-column-rxfilter{
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 5% !important;
-  width: 5% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
+.filter-search {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  margin-left: 10px;
 }
 
-.mat-column-trend{
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 5% !important;
-  width: 5% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
+.filter-button {
+  color: #1e88e5;
+  font-weight: bold;
 }
 
-.mat-column-date{
-  word-wrap: break-word !important;
-  white-space: unset !important;
-  flex: 0 0 20% !important;
-  width: 20% !important;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
+.filter-search input {
+  width: 30%;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  padding: 5px;
+}
 
-  word-break: break-word;
-
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
+table.mat-table {
+  width: 100%;
+  border-collapse: collapse;
 }
 
 th.mat-header-cell, td.mat-cell {
   text-align: left;
-  border: 1px solid #CCC;
-
+  min-width: 200px;
+  border: none !important;
 }
 
-.mat-expansion-panel-header-title {
-  margin-right: 0;
+th.mat-header-cell {
+  font-weight: bold;
+  font-size: 1.1em;
+  border-bottom: 1px solid #ccc; /* Add bottom border to header cells */
 }
 
-
-table.mat-table {
-  width:  100%;
+tr.mat-header-row, tr.mat-row {
+  border-bottom: 1px solid #ccc; /* Add bottom border to each row and header row */
 }
 
-table.mat-table th, table.mat-table td {
-  border-left: none !important;
-  border-right: none !important;
+.mat-column-condition, .mat-column-firstOnset, .mat-column-firstRecorded {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
