--- a/src/app/inactive-diagnosis-panel/inactive-diagnosis-panel.component.html
+++ b/src/app/inactive-diagnosis-panel/inactive-diagnosis-panel.component.html
@@ -8,7 +8,7 @@
       </button>
     </div>
     <div class="filter-search" *ngIf="showFilter">
-      <input matInput (keyup)="applyFilter($event)" placeholder="Filter inactive diagnosis">
+      <input matInput (keyup)="applyFilter($event)" placeholder="Filter Inactive diagnosis">
     </div>
   </div>
 </div>
@@ -20,11 +20,11 @@
   </ng-container>
   <ng-container matColumnDef="firstOnset">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Date of Initial Diagnosis</th>
-    <td mat-cell *matCellDef="let condition">{{condition.firstOnsetAsText | nullCheck }}</td>
+    <td mat-cell *matCellDef="let condition">{{condition.firstOnset | nullCheck }}</td>
   </ng-container>
   <ng-container matColumnDef="firstRecorded">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Diagnosis First Recorded</th>
-    <td mat-cell *matCellDef="let condition">{{condition.firstRecordedAsText | nullCheck}}</td>
+    <td mat-cell *matCellDef="let condition">{{condition.firstRecorded | nullCheck}}</td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
