--- a/src/app/inactive-diagnosis-panel/inactive-diagnosis-panel.component.html
+++ b/src/app/inactive-diagnosis-panel/inactive-diagnosis-panel.component.html
@@ -18,13 +18,17 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Condition</th>
     <td mat-cell *matCellDef="let condition">{{condition.code.text}}</td>
   </ng-container>
+  <ng-container matColumnDef="asserter">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Recording Clinician</th>
+    <td mat-cell *matCellDef="let condition">{{condition.asserter | nullCheck }}</td>
+  </ng-container>
   <ng-container matColumnDef="firstOnset">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Date of Initial Diagnosis</th>
-    <td mat-cell *matCellDef="let condition">{{condition.firstOnset | nullCheck }}</td>
+    <td mat-cell *matCellDef="let condition">{{condition.firstOnsetAsText | nullCheck }}</td>
   </ng-container>
   <ng-container matColumnDef="firstRecorded">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Diagnosis First Recorded</th>
-    <td mat-cell *matCellDef="let condition">{{condition.firstRecorded | nullCheck}}</td>
+    <td mat-cell *matCellDef="let condition">{{condition.firstRecordedAsText | nullCheck}}</td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
