--- a/src/app/inactive-diagnosis-panel/inactive-diagnosis-panel.component.html
+++ b/src/app/inactive-diagnosis-panel/inactive-diagnosis-panel.component.html
@@ -3,12 +3,12 @@
   <div class="filter-container">
     <div class="filter-icon">
       <button mat-button class="filter-button" (click)="toggleFilter()">
-        <mat-icon>filter_list</mat-icon>
-        FILTERS
+        <mat-icon>search</mat-icon>
+        SEARCH
       </button>
     </div>
     <div class="filter-search" *ngIf="showFilter">
-      <input matInput (keyup)="applyFilter($event)" placeholder="Filter Inactive diagnosis">
+      <input matInput (keyup)="applyFilter($event)" placeholder="Search Inactive diagnosis">
     </div>
   </div>
 </div>
