Added Configuration to hide the certain categories in the Health Status Tab

--- a/src/app/clinical-therapy-results/clinical-therapy-results.component.html
+++ b/src/app/clinical-therapy-results/clinical-therapy-results.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="showComponent">
 <div class="group-header">Therapy</div>
 <table class="resultTable" width="100%" valign="top">
   <tr class="resultTableHeader" >
@@ -10,3 +11,5 @@
     <td>{{getDisplayValue(res)}}</td>
     <td>{{getEffectiveValue(res.effectiveDateTime)}}</td>
   </tr>
+  </table>
+</div>
