--- a/src/app/clinical-imaging-results/clinical-imaging-results.component.html
+++ b/src/app/clinical-imaging-results/clinical-imaging-results.component.html
@@ -1,17 +1,15 @@
-<div class="group-header">Imaging Results</div>
-<table class="resultTable" width="100%" valign="top">
-
-  <tr class="resultTableHeader" >
-    <td><b>Test</b></td>
-    <td><b>Result</b></td>
-    <td><b>Date</b></td>
-  </tr>
-
-
-  <tr *ngFor="let res of dataservice.imaging">
-    <td>{{res.code.coding[0].display}}</td>
-    <td>{{getDisplayValue(res)}}</td>
-    <td>{{getEffectiveValue(res.effectiveDateTime)}}</td>
-  </tr>
-</table>
-
+<div *ngIf="showComponent">
+  <div class="group-header">Imaging Results</div>
+  <table class="resultTable" width="100%" valign="top">
+    <tr class="resultTableHeader">
+      <td><b>Test</b></td>
+      <td><b>Result</b></td>
+      <td><b>Date</b></td>
+    </tr>
+    <tr *ngFor="let res of dataservice.imaging">
+      <td>{{res.code.coding[0].display}}</td>
+      <td>{{getDisplayValue(res)}}</td>
+      <td>{{getEffectiveValue(res.effectiveDateTime)}}</td>
+    </tr>
+  </table>
+</div>
