Changed the title of the History in Health Status & Evaluation Tab

--- a/src/app/clinical-history-results/clinical-history-results.component.html
+++ b/src/app/clinical-history-results/clinical-history-results.component.html
@@ -1,4 +1,4 @@
-<div class="group-header">History</div>
+<div class="group-header">Social History</div>
 <table class="resultTable" width="100%" valign="top">
 
   <tr class="resultTableHeader" >
