--- a/src/app/clinical-questionaires-results/clinical-questionaires-results.component.css
+++ b/src/app/clinical-questionaires-results/clinical-questionaires-results.component.css
@@ -1,4 +1,4 @@
-
+/*
 table.internal,td.internal, td.internal {
   border: none;
   border-style: hidden;
@@ -22,6 +22,6 @@ table.inner-table tr td {
   border:none;
 }
 
-td { 
+td {
   padding: 2px 5px;
-}
+} */
