--- a/src/app/health-status/health-status.component.html
+++ b/src/app/health-status/health-status.component.html
@@ -23,4 +23,7 @@
   <section class="clearfix">
     <app-clinical-therapy-results *ngIf="featureToggling.status.therapy"></app-clinical-therapy-results>
   </section>
+  <section class="clearfix">
+    <app-clinical-questionaires-results *ngIf="featureToggling.status.questionaires"></app-clinical-questionaires-results>
+  </section>
 </div>
