--- a/src/app/consolidated-goals/consolidated-goals.component.html
+++ b/src/app/consolidated-goals/consolidated-goals.component.html
@@ -1,13 +1,13 @@
 <div class="group-header">Goals</div>
 <table mat-table matSort [dataSource]="consolidatedGoalsDataSource" width="100%" matSortActive="priority"
   matSortDirection="asc">
-  <ng-container matColumnDef="rank">
+  <!-- <ng-container matColumnDef="rank">
     <th mat-header-cell *matHeaderCellDef mat-sort-header="priority">Priority</th>
     <td mat-cell *matCellDef="let goal">
       <mat-icon *ngIf="goal.priority.toLowerCase().includes('high')">priority_high</mat-icon>
       <mat-icon *ngIf="goal.priority.toLowerCase().includes('low')">low_priority</mat-icon>
     </td>
-  </ng-container>
+  </ng-container> -->
   <!-- <ng-container matColumnDef="lfcstatus">
     <th mat-header-cell *matHeaderCellDef mat-sort-header="lifecycleStatus">Status</th>
     <td mat-cell *matCellDef="let goal"> {{goal.lifecycleStatus | titlecase }} </td>
@@ -20,14 +20,18 @@
   <!-- <ng-container matColumnDef="addresses">
     <th mat-header-cell *matHeaderCellDef mat-sort-header="addresses">Addresses</th>
     <td mat-cell *matCellDef="let goal" > <span *ngFor="let xxx of goal.addresses">{{xxx.display}}</span> </td>
-  </ng-container>
-  <ng-container matColumnDef="created">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header="startDateText">Created</th>
-    <td mat-cell *matCellDef="let goal"> {{goal.startDateText}} </td>
   </ng-container> -->
+  <ng-container matColumnDef="created">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="startDateText">Start Date</th>
+    <td mat-cell *matCellDef="let goal"> {{goal.startDateText}} </td>
+  </ng-container>
   <ng-container matColumnDef="targetdate">
     <th mat-header-cell *matHeaderCellDef mat-sort-header="targetDateText">Target Date</th>
     <td mat-cell *matCellDef="let goal"> {{goal.targetDateText}} </td>
+  </ng-container>
+  <ng-container matColumnDef="lifecycleStatus">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header="lifecycleStatus">Goal Status</th>
+    <td mat-cell *matCellDef="let goal"> {{ goal.lifecycleStatus | titlecase }} </td>
   </ng-container>
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef mat-sort-header="achievementText">Achievement Status</th>
