--- a/src/app/diagnosis-panel/diagnosis-panel.component.html
+++ b/src/app/diagnosis-panel/diagnosis-panel.component.html
@@ -2,7 +2,7 @@
 </app-active-diagnosis-panel>
 
 <div *ngIf="featureToggling.healthAndSocialConcerns.activeDiagnoses && !getActiveIsReady()" style="height: 200px;">
-    <mat-panel-title class="group-header">Problem List</mat-panel-title>
+    <mat-panel-title class="group-header">Problem Listbbbb</mat-panel-title>
     <mat-spinner style="margin:0 auto;" mode="indeterminate"></mat-spinner>
 </div>
 
