--- a/src/app/inactive-diagnosis-panel/inactive-diagnosis-panel.component.html
+++ b/src/app/inactive-diagnosis-panel/inactive-diagnosis-panel.component.html
@@ -30,6 +30,10 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Diagnosis First Recorded</th>
     <td mat-cell *matCellDef="let condition">{{condition.firstRecordedAsText | nullCheck}}</td>
   </ng-container>
+  <ng-container matColumnDef="provenance">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Source</th>
+    <td mat-cell *matCellDef="let condition">{{condition.provenance | nullCheck}}</td>
+  </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
