--- a/src/app/medication-panel/medication-panel.component.html
+++ b/src/app/medication-panel/medication-panel.component.html
@@ -48,6 +48,11 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="source">
+    <th mat-header-cell   *matHeaderCellDef mat-sort-header>Source</th>
+    <td mat-cell *matCellDef="let med"> {{med.source}} </td>
+  </ng-container>
+
   <ng-container matColumnDef="notes">
     <th mat-header-cell [hidden]="true" *matHeaderCellDef mat-sort-header>Notes</th>
     <td mat-cell [hidden]="true" *matCellDef="let med"> {{med.notes}} </td>
